--- a/nexaas-app/app/assets/less/partials/_search.less
+++ b/nexaas-app/app/assets/less/partials/_search.less
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.65);
-    animation: fadeIn .5s;
+    animation: fadeIn .3s;
   }
 
   &-content {
@@ -23,7 +23,7 @@
     align-items: center;
     height: 65px;
     background-color: #fff;
-    animation: fadeIn .3s;
+    animation: fadeIn .1s;
   }
 
   &-context {
@@ -31,8 +31,14 @@
     max-width: 240px;
     height: 100%;
     padding: 15px;
+    justify-content: space-between;
     align-items: center;
     background-color: #eee;
+
+    .btn-remove-context {
+      margin-left: 15px;
+      cursor: pointer;
+    }
   }
 
   &-form {
@@ -75,6 +81,7 @@
     &-content {
       margin: 0;
       width: 100%;
+      height: 100%;
       flex-wrap: wrap;
       box-shadow: none;
     }
@@ -87,11 +94,14 @@
       &:after {
         content: "";
       }
-      border-bottom: 1px solid #eee;
     }
 
     &-overlay {
       background-color: #fff;
+    }
+
+    &-input-group {
+      border-bottom: 1px solid #e5e5e5;
     }
   }
 }
@@ -100,6 +110,7 @@
   display: none;
   padding: 10px 15px;
   background-color: #fff;
+  border-top: 1px solid #e5e5e5;
   border-radius: 0 0 3px 3px;
 
   &-count {
